[Fix] Shrink in TonicsCloud Statuses and ensure content in td can wrap

--- a/src/Modules/Core/Assets/css/styles.css
+++ b/src/Modules/Core/Assets/css/styles.css
@@ -901,6 +901,7 @@ fieldset {
     align-items: center;
     border-left: 1px solid rgb(0 0 0 / 49%);
     border-top: 1px solid #c9d7dd;
+    word-break: break-word;
 }
 
 .dataTable tr:nth-child(even) td {
@@ -977,4 +978,5 @@ fieldset {
     margin-right: 6px;
     position: relative;
     transition: color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    flex-shrink: 0;
 }
